VSE placement of some elements is off by 1 px #90785

Closed
opened 2021-08-19 23:37:20 +02:00 by tt · 11 comments

System Information
Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: a217e043be
Worked: (newest version of Blender that worked as expected)

Short description of error
blender vse placement bug.blend
bug.jpg
place some elements smaller than the video canvas in vse by pixel and there will be errors. probably because the elements are smaller than full size.

Exact steps for others to reproduce the error
attached file:
vse canvas size: 1000x1000px
added 500x500px image and placed it on -250;250
duplicated the image to have 4 of them and tried to fill the whole canvas with the images by pixel perfect placement.
on my machine there are gaps appearing between the elements on the bottom right one, maybe there are different gaps on different machines, I had different gaps than these before.
even setting it to 249 on one axis does not solve this but introduces unwanted gaps at the bottom. and it seems there are gaps between the bottom left image and the canvas bottom too.

my idea for a solution would be to start placing elements from to top left or bottom left and not from the center as the 0 in the center makes it weird and unintuitive, a 0 on x and y in a corner makes this a bit easier. That would lead to the need of anchor points on elements I think, elements should have an anchor on a corner (top left or the same as the canvas zero point as default) to make placing them also easier, switching corner for the anchor point could be an option as well as setting a value for the anchor point could be an option. rotation could also have the option to switch between center and anchor point rotation, same for scaling.
AND anchor points would make it probably easier to implement object snapping, that would be really useful but has nothing to do with this bug report :)

**System Information** Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: `a217e043be` Worked: (newest version of Blender that worked as expected) **Short description of error** [blender vse placement bug.blend](https://archive.blender.org/developer/F10294608/blender_vse_placement_bug.blend) ![bug.jpg](https://archive.blender.org/developer/F10294614/bug.jpg) place some elements smaller than the video canvas in vse by pixel and there will be errors. probably because the elements are smaller than full size. **Exact steps for others to reproduce the error** attached file: vse canvas size: 1000x1000px added 500x500px image and placed it on -250;250 duplicated the image to have 4 of them and tried to fill the whole canvas with the images by pixel perfect placement. on my machine there are gaps appearing between the elements on the bottom right one, maybe there are different gaps on different machines, I had different gaps than these before. even setting it to 249 on one axis does not solve this but introduces unwanted gaps at the bottom. and it seems there are gaps between the bottom left image and the canvas bottom too. my idea for a solution would be to start placing elements from to top left or bottom left and not from the center as the 0 in the center makes it weird and unintuitive, a 0 on x and y in a corner makes this a bit easier. That would lead to the need of anchor points on elements I think, elements should have an anchor on a corner (top left or the same as the canvas zero point as default) to make placing them also easier, switching corner for the anchor point could be an option as well as setting a value for the anchor point could be an option. rotation could also have the option to switch between center and anchor point rotation, same for scaling. AND anchor points would make it probably easier to implement object snapping, that would be really useful but has nothing to do with this bug report :)

#88838 was marked as duplicate of this issue

#88838 was marked as duplicate of this issue
Author

Added subscriber: @ToxicTuba

Added subscriber: @ToxicTuba
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

There was this report as well #88838 (VSE editor is 1 pixel off when aligning non-frame images) which I could not reproduce, but this one I can.

There was this report as well #88838 (VSE editor is 1 pixel off when aligning non-frame images) which I could not reproduce, but this one I can.
Member

Added subscriber: @GH-7

Added subscriber: @GH-7

I'd like to add that Blender 2.92 did NOT have this problem. It started with 2.93.

I'd like to add that Blender 2.92 did NOT have this problem. It started with 2.93.

Added subscriber: @iss

Added subscriber: @iss

I think I have solved it, but the solution may cause problems I am not aware of. But cropping seems to work correctly. Would be good to do tests with some method to verify precision.

I will make patch build - more eyes on this the better, so feel free to check too. I did very quick test only so hopefully it's not too bad and I won't waste anybody's time...
Build will be (in few hours) on https://builder.blender.org/download/patch/

I think I have solved it, but the solution may cause problems I am not aware of. But cropping seems to work correctly. Would be good to do tests with some method to verify precision. I will make patch build - more eyes on this the better, so feel free to check too. I did very quick test only so hopefully it's not too bad and I won't waste anybody's time... Build will be (in few hours) on https://builder.blender.org/download/patch/

Added subscriber: @bagospanners

Added subscriber: @bagospanners
Richard Antalik added this to the Video Sequencer project 2023-02-09 21:18:58 +01:00
Philipp Oeser removed the
Interest
VFX & Video
label 2023-02-10 09:31:45 +01:00
Sergey Sharybin added
Type
Bug
and removed
Type
Report
labels 2023-02-23 16:48:40 +01:00

This (not merged yet) PR seems to fix the issue: #116628

This (not merged yet) PR seems to fix the issue: #116628
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-08 16:52:52 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90785
No description provided.