VSE: Fix various "off by half a pixel" issues in image transform

Code inside `IMB_transform` (which is pretty much only used inside VSE
to do translation/rotation/scale of image or movie strips) was not
correctly doing mapping between pixel and texel spaces. This is similar
to e.g. GPU rasterization rules and has to do with whether some
coordinate refers to pixel/texel "corner" or "center" etc. It's a long
topic, but short summary would be:

- Coordinates refer to pixel/texel corner,
- Do sampling at pixel centers,
- Bilinear filter should use floor(x-0.5) and floor(x-0.5)+1 texels.

Also, there was a sign error introduced in Subsampling 3x3 filter, in
commit b3fd169259ac.

After making the PR, I found out that this seems to fix #90785, #112923
and possibly some others.

Long explanation with lots of images is in the PR.

Pull Request: https://projects.blender.org/blender/blender/pulls/116628